native/native.tests/testData/compilerOutput/releaseCompilerAgainstPreReleaseFeature/output.fir.txt
error: pre-release declarations were found in dependencies. Please exclude the dependencies with such declarations and recompile with a release compiler, or use '-Xskip-prerelease-check' to suppress errors. Note that in the latter case the compiled declarations will also be marked as pre-release.
$TESTDATA_DIR$/releaseCompilerAgainstPreReleaseFeature/source.kt:6:16: error: package 'a' was compiled by a pre-release version of Kotlin and cannot be loaded by this version of the compiler. Enabled pre-release features: <!POISONING_LANGUAGE_FEATURE!>
fun baz(param: A, nested: A.Nested) {
               ^
$TESTDATA_DIR$/releaseCompilerAgainstPreReleaseFeature/source.kt:6:27: error: package 'a' was compiled by a pre-release version of Kotlin and cannot be loaded by this version of the compiler. Enabled pre-release features: <!POISONING_LANGUAGE_FEATURE!>
fun baz(param: A, nested: A.Nested) {
                          ^^^^^^^^
$TESTDATA_DIR$/releaseCompilerAgainstPreReleaseFeature/source.kt:7:23: error: package 'a' was compiled by a pre-release version of Kotlin and cannot be loaded by this version of the compiler. Enabled pre-release features: <!POISONING_LANGUAGE_FEATURE!>
    val constructor = A()
                      ^^^
$TESTDATA_DIR$/releaseCompilerAgainstPreReleaseFeature/source.kt:8:18: error: package 'a' was compiled by a pre-release version of Kotlin and cannot be loaded by this version of the compiler. Enabled pre-release features: <!POISONING_LANGUAGE_FEATURE!>
    val nested = A.Nested()
                 ^^^^^^^^^^
$TESTDATA_DIR$/releaseCompilerAgainstPreReleaseFeature/source.kt:9:22: error: package 'a' was compiled by a pre-release version of Kotlin and cannot be loaded by this version of the compiler. Enabled pre-release features: <!POISONING_LANGUAGE_FEATURE!>
    val methodCall = param.method()
                     ^^^^^
$TESTDATA_DIR$/releaseCompilerAgainstPreReleaseFeature/source.kt:9:28: error: unresolved reference 'method'.
    val methodCall = param.method()
                           ^^^^^^
$TESTDATA_DIR$/releaseCompilerAgainstPreReleaseFeature/source.kt:10:30: error: package 'a' was compiled by a pre-release version of Kotlin and cannot be loaded by this version of the compiler. Enabled pre-release features: <!POISONING_LANGUAGE_FEATURE!>
    val supertype = object : A() {}
                             ^
$TESTDATA_DIR$/releaseCompilerAgainstPreReleaseFeature/source.kt:12:13: error: package 'a' was compiled by a pre-release version of Kotlin and cannot be loaded by this version of the compiler. Enabled pre-release features: <!POISONING_LANGUAGE_FEATURE!>
    val x = foo()
            ^^^^^
$TESTDATA_DIR$/releaseCompilerAgainstPreReleaseFeature/source.kt:13:13: error: package 'a' was compiled by a pre-release version of Kotlin and cannot be loaded by this version of the compiler. Enabled pre-release features: <!POISONING_LANGUAGE_FEATURE!>
    val y = bar
            ^^^
$TESTDATA_DIR$/releaseCompilerAgainstPreReleaseFeature/source.kt:14:5: error: package 'a' was compiled by a pre-release version of Kotlin and cannot be loaded by this version of the compiler. Enabled pre-release features: <!POISONING_LANGUAGE_FEATURE!>
    bar = 239
    ^^^
COMPILATION_ERROR
